# pacfo

./: Cargo.toml  PKGBUILD  README.md  TODO.md
release/: pacfo
src/: args.rs  main.rs  package.rs
